--- a/public/assets/views/login_registration.html
+++ b/public/assets/views/login_registration.html
@@ -88,7 +88,7 @@
 						<p>
 							Already have an account? <a ui-sref="login.signin"> Log-in </a>
 						</p>
-						<button type="submit" ng-click="form.register(myModel); disableSubmit=true;"
+						<button type="submit" ng-click="form.register(myModel); "
                                                         class="btn btn-primary pull-right" ng-disabled="disableSubmit">
 							Submit <i class="fa fa-arrow-circle-right"></i>
 						</button>
