some issues resolved

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -13499,3 +13499,8 @@ td.small-width {
 [date-picker] .disabled.active, [date-picker] .disabled.now {
 	color: #ffffff !important;
 }
+
+
+.well{
+	height:8.5em;
+}
