--- a/public/assets/views/login_forgot.html
+++ b/public/assets/views/login_forgot.html
@@ -6,22 +6,24 @@
 			<img ng-src="{{app.layout.logo}}" alt="{{app.name}}" />
 		</div>
 		<!-- start: FORGOT BOX -->
-		<div class="box-forgot">
-			<form class="form-forgot">
+		<div class="box-forgot" data-ng-controller="forgetPasswordCtrl">
+			<form class="form-forgot" name="Form" novalidate>
 				<fieldset>
 					<legend> Forget Password? </legend>
 					<p>Enter your e-mail address below to reset your password.</p>
-					<div class="form-group">
+					<div class="form-group"
+						 ng-class="{'has-error':errors.email, 'has-success':!errors.email}">
 						<span class="input-icon"> <input type="email"
-							class="form-control" name="email" placeholder="Email"> <i
+							class="form-control" name="email" data-ng-model="myModel.email" placeholder="Email" > <i
 							class="fa fa-envelope-o"></i>
 						</span>
+						<span class="error text-small block" ng-if="errors.email">{{errors.email}}</span>
 					</div>
 					<div class="form-actions">
 						<a class="btn btn-primary btn-o" ui-sref="login.signin"> <i
 							class="fa fa-chevron-circle-left"></i> Log-In
 						</a>
-						<button type="submit" class="btn btn-primary pull-right">
+						<button type="submit" class="btn btn-primary pull-right" ng-click="form.forgotPassword(myModel); ">
 							Submit <i class="fa fa-arrow-circle-right"></i>
 						</button>
 					</div>
