--- a/public/assets/views/login_registration.html
+++ b/public/assets/views/login_registration.html
@@ -68,6 +68,9 @@
 					</div>
 					<div class="form-actions">
 						<p>
+							By registring at SPORTOFITT as SELECT partner you agree with the <a href="#">terms & conditions</a> of this agreement.
+						</p>
+						<p>
 							Already have an account? <a ui-sref="login.signin"> Log-in </a>
 						</p>
 						<button type="submit" ng-click="form.register(myModel); "
