--- a/public/front/views/layouts/navbar.html
+++ b/public/front/views/layouts/navbar.html
@@ -7,16 +7,16 @@
         <nav class="navigation-items">
             <div class="wrapper">
                 <ul class="main-navigation navigation-top-header"></ul>
-                <ul class="user-area">
+                <ul ng-if="!isAuthenticated()" class="user-area">
                     <li><a ui-sref="login">Sign In</a></li>
                     <li><a ui-sref="register"><strong>Register</strong></a></li>
+                      </ul>
+                <ul ng-if="isAuthenticated()" class="user-area">
+                    <li><a ui-sref="logout">Sign Out</a></li>
+                   <li><a ui-sref="profile"><strong>Profile</strong></a></li>
+
                 </ul>
-                <a href="submit.html" class="submit-item">
-                    <div class="content"><span>Submit Your Item</span></div>
-                    <div class="icon">
-                        <i class="fa fa-plus"></i>
-                    </div>
-                </a>
+
                 <div class="toggle-navigation">
                     <div class="icon">
                         <div class="line"></div>
