--- a/public/front/views/register/index.html
+++ b/public/front/views/register/index.html
@@ -43,7 +43,7 @@
                         </div><!-- /.form-group -->
 
                         <div class="form-group clearfix">
-                            <button type="submit" class="btn pull-right btn-default" id="account-submit">Create an Account</button>
+                            <button type="submit" class="btn pull-right btn-default" ng-disabled="vm.disableSubmit" id="account-submit">Create an Account</button>
                         </div><!-- /.form-group -->
                     </form>
                     <hr>
