--- a/public/front/views/profile/index.html
+++ b/public/front/views/profile/index.html
@@ -13,13 +13,13 @@
         <section class="container">
             <header>
                 <ul class="nav nav-pills">
-                    <li class="active"><a href="profile.html"><h1 class="page-title">John Doe</h1></a></li>
+                    <li class="active"><a ui-sref="profile"><h1 class="page-title">{{vm.userInfo.fname}} {{vm.userInfo.lname}}</h1></a></li>
                     <!--<li><a href="my-items.html"><h1 class="page-title">My Items</h1></a></li>-->
                 </ul>
             </header>
             <div class="row">
                 <div class="col-md-9">
-                    <form id="form-profile" role="form" method="post" action="?" enctype="multipart/form-data">
+                    <form id="form-profile" role="form" method="post" data-ng-submit="vm.saveUserProfile(vm.userInfo)" enctype="multipart/form-data">
                         <div class="row">
                             <!--Profile Picture-->
                             <div class="col-md-3 col-sm-3">
@@ -28,7 +28,8 @@
                                     <div id="profile-picture" class="profile-picture dropzone">
                                         <input name="file" type="file">
                                         <div class="dz-default dz-message"><span>Click or drop picture here</span></div>
-                                        <img src="assets/img/member-2.jpg" alt="">
+                                        <img ng-src="assets/img/member-2.jpg" alt="" ng-if="!vm.userInfo.profile_picture">
+                                        <img ng-src="{{vm.userInfo.profile_picture}}" alt="" ng-if="vm.userInfo.profile_picture">
                                     </div>
                                 </section>
                             </div>
@@ -41,8 +42,15 @@
                                     <div class="row">
                                         <div class="col-md-6 col-sm-6">
                                             <div class="form-group">
-                                                <label for="name">Name</label>
-                                                <input type="text" class="form-control" id="name" name="name" value="John Doe">
+                                                <label for="name">First Name</label>
+                                                <input type="text" data-ng-model="vm.userInfo.fname" class="form-control" id="name" name="fname" >
+                                            </div>
+                                            <!--/.form-group-->
+                                        </div>
+                                        <div class="col-md-6 col-sm-6">
+                                            <div class="form-group">
+                                                <label for="name">Last Name</label>
+                                                <input type="text" data-ng-model="vm.userInfo.lname" class="form-control" id="name" name="lname" >
                                             </div>
                                             <!--/.form-group-->
                                         </div>
@@ -50,7 +58,7 @@
                                         <div class="col-md-6 col-sm-6">
                                             <div class="form-group">
                                                 <label for="email">Email</label>
-                                                <input type="email" class="form-control" id="email" name="email" value="johndoe@example.com">
+                                                <input type="email" class="form-control" id="email" data-ng-model="vm.userInfo.email"  name="email" value="johndoe@example.com">
                                             </div>
                                             <!--/.form-group-->
                                         </div>
@@ -58,15 +66,7 @@
                                         <div class="col-md-6 col-sm-6">
                                             <div class="form-group">
                                                 <label for="mobile">Mobile</label>
-                                                <input type="text" class="form-control" id="mobile" name="mobile" pattern="\d*" value="903-675-5323">
-                                            </div>
-                                            <!--/.form-group-->
-                                        </div>
-                                        <!--/.col-md-3-->
-                                        <div class="col-md-6 col-sm-6">
-                                            <div class="form-group">
-                                                <label for="phone">Phone</label>
-                                                <input type="text" class="form-control" id="phone" name="phone" pattern="\d*" value="(0)123 456 7890">
+                                                <input type="text" class="form-control" id="mobile" name="mobile" data-ng-model="vm.userInfo.phone_no"  pattern="\d*">
                                             </div>
                                             <!--/.form-group-->
                                         </div>
@@ -77,51 +77,55 @@
                                     <h3><i class="fa fa-map-marker"></i>Address</h3>
                                     <div class="form-group">
                                         <label for="state">State</label>
-                                        <input type="text" class="form-control" id="state" name="state" value="Ohio">
+                                        <input type="text" class="form-control" id="state" name="state" value="Maharashtra">
                                     </div>
                                     <!--/.form-group-->
                                     <div class="form-group">
                                         <label for="city">City</label>
-                                        <input type="text" class="form-control" id="city" name="city" value="Georgetown">
+                                         <select class="form-control" id="city" name="city_id" data-ng-model="vm.userInfo.city_id" ng-options="city.id as city.name for city in vm.cities">
+                                        </select>
                                     </div>
                                     <!--/.form-group-->
                                     <div class="row">
                                         <div class="col-md-8 col-sm-8">
                                             <div class="form-group">
-                                                <label for="street">Street</label>
-                                                <input type="text" class="form-control" id="street" name="street" value="2050 Sampson Street">
+                                                <label for="area">Area</label>
+                                                <select class="form-control" id="area" name="area_id" data-ng-model="vm.userInfo.area_id" ng-options="area.id as area.name for area
+                                                 in vm.areas">
+                                                    <option value="">Choose Area</option>
+                                                </select>
                                             </div>
                                             <!--/.form-group-->
                                         </div>
                                         <!--/.col-md-8-->
                                         <div class="col-md-4 col-sm-4">
                                             <div class="form-group">
-                                                <label for="zip">ZIP</label>
-                                                <input type="text" class="form-control" id="zip" name="zip" pattern="\d*" value="80444">
+                                                <label for="zip">Pin code</label>
+                                                <input type="text" class="form-control" data-ng-model="vm.userInfo.pincode" id="zip" name="pincode" pattern="\d*" value="80444">
                                             </div>
                                             <!--/.form-group-->
                                         </div>
                                     </div>
                                     <!--/.col-md-3-->
                                     <div class="form-group">
-                                        <label for="additional-address">Additional Address Line</label>
-                                        <input type="text" class="form-control" id="additional-address" name="additional-address">
+                                        <label for="additional-address">Address Details</label>
+                                        <input type="text" class="form-control" data-ng-model="vm.userInfo.address" id="additional-address" name="additional-address">
                                     </div>
                                     <!--/.form-group-->
                                 </section>
-                                <section>
-                                    <h3><i class="fa fa-info-circle"></i>About Me</h3>
-                                    <div class="form-group">
-                                        <label for="about-me">Some Words About Me</label>
-                                        <div class="form-group">
-                                            <textarea class="form-control" id="about-me" rows="3" name="about-me" required></textarea>
-                                        </div>
-                                        <!--/.form-group-->
-                                    </div>
-                                    <!--/.form-group-->
-                                </section>
+                                <!--<section>-->
+                                    <!--<h3><i class="fa fa-info-circle"></i>About Me</h3>-->
+                                    <!--<div class="form-group">-->
+                                        <!--<label for="about-me">Some Words About Me</label>-->
+                                        <!--<div class="form-group">-->
+                                            <!--<textarea class="form-control" id="about-me" rows="3" name="about-me" required></textarea>-->
+                                        <!--</div>-->
+                                        <!--&lt;!&ndash;/.form-group&ndash;&gt;-->
+                                    <!--</div>-->
+                                    <!--&lt;!&ndash;/.form-group&ndash;&gt;-->
+                                <!--</section>-->
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-large btn-default" id="submit">Save Changes</button>
+                                    <button type="submit" class="btn btn-large btn-default" id="submit" ng-disabled="vm.disableSubmit">Save Changes</button>
                                 </div>
                                 <!-- /.form-group -->
                             </div>
@@ -129,6 +133,40 @@
                         </div>
                     </form>
                 </div>
+                <!--Password-->
+                <div class="col-md-3 col-sm-9">
+                    <h3><i class="fa fa-asterisk"></i>Password Change</h3>
+                    <form class="framed" id="form-password" role="form" method="post" data-ng-submit="vm.changePassward(vm.userPassword)">
+                        <div class="form-group">
+                            <label for="current-password">Current Password</label>
+                            <input type="password" class="form-control" id="current-password"
+                                   data-ng-model="vm.userPassword.current_password" name="current-password">
+                            <span class="error text-small " ng-if="vm.errors.current_password">{{vm.errors.current_password}}</span>
+
+                        </div>
+                        <!--/.form-group-->
+                        <div class="form-group">
+                            <label for="new-password">New Password</label>
+                            <input type="password" class="form-control" data-ng-model="vm.userPassword.password" id="new-password" name="new-password">
+                            <span class="error text-small " ng-if="vm.errors.password">{{vm.errors.password}}</span>
+
+                        </div>
+                        <!--/.form-group-->
+                        <div class="form-group">
+                            <label for="confirm-new-password">Confirm New Password</label>
+                            <input type="password" data-ng-model="vm.userPassword.password_confirmation" class="form-control" id="confirm-new-password" name="confirm-new-password">
+                            <span class="error text-small " ng-if="vm.errors.password_confirmation">{{vm.errors.password_confirmation}}</span>
+
+                        </div>
+                        <!--/.form-group-->
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default" ng-disabled="vm.disableSubmit">Change Password</button>
+                        </div>
+                        <!-- /.form-group -->
+                    </form>
+                </div>
+                <!-- /.col-md-3-->
+
             </div>
         </section>
     </div>
