--- a/public/front/views/home/index.html
+++ b/public/front/views/home/index.html
@@ -790,3 +790,11 @@
     <!-- end Page Content-->
 </div>
 <!-- end Page Canvas-->
+<script src='https://maps.googleapis.com/maps/api/js'></script>
+
+<script type="text/javascript" src="assets/js/infobox.js"></script>
+<script type="text/javascript" src="assets/js/richmarker-compiled.js"></script>
+
+<script type="text/javascript" src="assets/js/markerclusterer.js"></script>
+<script type="text/javascript" src="assets/js/custom.js"></script>
+<script type="text/javascript" src="assets/js/maps.js"></script>
