--- a/public/front/views/home/index.html
+++ b/public/front/views/home/index.html
@@ -23,35 +23,24 @@
                 <div id="map" class="has-parallax"></div>
                 <!--/#map-->
                 <div class="search-bar horizontal">
-                    <form class="main-search border-less-inputs" role="form" method="post">
+                    <form class="main-search border-less-inputs" data-ng-submit="vm.setFilters(vm.filter)" role="form" method="post">
                         <div class="input-row">
                             <div class="form-group">
-                                <input type="text" class="form-control" id="keyword" placeholder="Enter Keyword">
+                                <select data-ng-model="vm.filter.subcategory" ng-options="category.name as category.name for category in vm.subCategories">
+
+                                </select>                            </div>
+                            <!-- /.form-group -->
+                            <div class="form-group">
+                                    <div class="btn-group">
+                                        <input type="radio" ng-model="vm.filter.type" value="Venue">Venue</input>
+                                        <input type="radio" class="btn btn-primary" ng-model="vm.filter.type" value="Other">Other</input>
+                                     </div>
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
-                                <div class="input-group location">
-                                    <input type="text" class="form-control" id="location" placeholder="Enter Location">
-                                    <span class="input-group-addon"><i class="fa fa-map-marker geolocation" toggle="tooltip" placement="bottom" title="Find my position"></i></span>
-                                </div>
-                            </div>
-                            <!-- /.form-group -->
-                            <div class="form-group">
-                                <select name="category"  title="Select Category" data-live-search="true">
-                                    <option value="1">Stores</option>
-                                    <option value="2" class="sub-category">Apparel</option>
-                                    <option value="3" class="sub-category">Computers</option>
-                                    <option value="4" class="sub-category">Nature</option>
-                                    <option value="5">Tourism</option>
-                                    <option value="6">Restaurant & Bars</option>
-                                    <option value="7" class="sub-category">Bars</option>
-                                    <option value="8" class="sub-category">Vegetarian</option>
-                                    <option value="9" class="sub-category">Steak & Grill</option>
-                                    <option value="10">Sports</option>
-                                    <option value="11" class="sub-category">Cycling</option>
-                                    <option value="12" class="sub-category">Water Sports</option>
-                                    <option value="13" class="sub-category">Winter Sports</option>
-                                </select>
+                  <select data-ng-model="vm.filter.areas" ng-options="area.id as area.name for area in vm.areas">
+
+                  </select>
                             </div>
                             <!-- /.form-group -->
                             <div class="form-group">
