--- a/public/front/views/layouts/navbar.html
+++ b/public/front/views/layouts/navbar.html
@@ -8,7 +8,7 @@
             <div class="wrapper">
                 <ul class="main-navigation navigation-top-header"></ul>
                 <ul ng-if="!isAuthenticated()" class="user-area">
-                    <li><a ui-sref="applogin">Sign In</a></li>
+                    <li><a ui-sref="app.login">Sign In</a></li>
                     <li><a ui-sref="app.register"><strong>Register</strong></a></li>
                       </ul>
                 <ul ng-if="isAuthenticated()" class="user-area">
