venue radio buttton

--- a/public/front/views/home/index.html
+++ b/public/front/views/home/index.html
@@ -32,7 +32,7 @@
                                 </select>                            </div>
                             <!-- /.form-group -->
                             <div class="form-group">
-                                <select data-ng-model="vm.filter.type" ng-options="category for category in vm.types">
+                                <select data-ng-model="vm.filter.type" ng-options="type for type in vm.types">
                                     <option value="">Select Type</option>
                                 </select>
                             </div>
